storaged: Make sure disk names doesn't get cut off abruptly
This happens a lot with iSCSI device names.

Fixes #2987
Closes #2988

--- a/pkg/storaged/storage.css
+++ b/pkg/storaged/storage.css
@@ -121,6 +121,11 @@
     padding-right: 5px;
 }
 
+#storage .storage-sidebar .storage-disk-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .available-disks-group
 {
     margin-bottom: 0px;
